--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,18 @@
     <artifactId>jaxb-api</artifactId>
     <version>2.3.0</version><!--$NO-MVN-MAN-VER$-->
 </dependency>
+<dependency>
+   <groupId>org.springframework.boot</groupId>
+   <artifactId>spring-boot-starter-tomcat</artifactId>
+   <scope>provided</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
+<dependency>
+    <groupId>org.apache.tomcat.embed</groupId>
+    <artifactId>tomcat-embed-core</artifactId>
+    <version>9.0.19</version>
+</dependency>
+
   </dependencies>
    <parent>
     <groupId>org.springframework.boot</groupId>
