--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/career_tinder?createDatabaseIfNotExist=true
 spring.datasource.username = root
-spring.datasource.password = borabora
+spring.datasource.password = admin
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ## Hibernate Properties
@@ -12,7 +12,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-server.port=60571
-server.error.whitelabel.enabled=false
 
