--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.CompanyDashboardActivity"/>
+        <activity android:name=".activities.JobOpeningsListActivity"></activity>
+        <activity android:name=".activities.CompanyDashboardActivity" />
         <activity android:name=".activities.CandidateDashboardActivity" />
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
