--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.JobOpeningsListActivity"/>
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.EditJobOpeningActivity"></activity>
+        <activity android:name=".activities.JobOpeningsListActivity" />
         <activity android:name=".activities.CompanyDashboardActivity" />
         <activity android:name=".activities.CandidateDashboardActivity" />
         <activity android:name=".activities.SplashActivity">
