--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/career_tinder?createDatabaseIfNotExist=true
 spring.datasource.username = root
-spring.datasource.password = admin
+spring.datasource.password = root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ## Hibernate Properties
