-- Implementation of image uploading and downloading using Firebase storage.

--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -35,4 +35,12 @@ dependencies {
     implementation 'com.mindorks.android:placeholderview:1.0.3'
     annotationProcessor 'com.mindorks.android:placeholderview-compiler:1.0.3'
     implementation 'com.karumi:dexter:5.0.0'
+
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
+    implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
+
+apply plugin: 'com.google.gms.google-services'
