--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.castorflex.smoothprogressbar:library-circular:1.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
