Change in pom.xml
Accompanied jar name as "career-tinder" for the purpose of deployment on
Cloud Foundary.

--- a/pom.xml
+++ b/pom.xml
@@ -85,5 +85,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>career-tinder</finalName>
 	</build>
 </project>
