--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/career_tinder?createDatabaseIfNotExist=true
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/dIJBfqht6f?createDatabaseIfNotExist=true
+spring.datasource.username = dIJBfqht6f
+spring.datasource.password = HMeRvq03vA
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ## Hibernate Properties
@@ -12,4 +12,3 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
