--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,25 @@
     <artifactId>jaxb-api</artifactId>
     <version>2.3.0</version><!--$NO-MVN-MAN-VER$-->
 </dependency>
-
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.9</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/info.debatty/java-string-similarity -->
+<dependency>
+    <groupId>info.debatty</groupId>
+    <artifactId>java-string-similarity</artifactId>
+    <version>1.0.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+<dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>28.0-jre</version>
+</dependency>
   </dependencies>
    <parent>
     <groupId>org.springframework.boot</groupId>
