Added /applicantSwipe/{authcode} API.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/dIJBfqht6f?createDatabaseIfNotExist=true
+# spring.datasource.url=jdbc:mysql://remotemysql.com:3306/dIJBfqht6f?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/dIJBfqht6f
 spring.datasource.username = dIJBfqht6f
 spring.datasource.password = HMeRvq03vA
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
