--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -10,12 +10,14 @@
 
     <application
         android:allowBackup="true"
+        android:name="android.support.multidex.MultiDexApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity android:name=".activities.CandidateMatchViewerActivity"/>
         <activity android:name=".activities.CompanyMatchViewerActivity"/>
         <activity android:name=".activities.EditJobOpeningActivity" />
@@ -36,6 +38,7 @@
         <activity android:name=".activities.CreateCandidateProfileActivity" />
         <activity android:name=".activities.JobDetailActivity" />
         <activity android:name=".activities.CandidateDetailActivity" />
+        <activity android:name=".activities.ChatActivity" />
     </application>
 
 </manifest>
