--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
@@ -51,6 +52,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
     implementation 'com.firebaseui:firebase-ui-database:4.3.1'
     implementation 'com.google.firebase:firebase-database:17.0.0'
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
