--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -10,21 +10,13 @@
 
     <application
         android:allowBackup="true"
-        android:name="android.support.multidex.MultiDexApplication"
+        android:name=".application.Application"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-        <activity android:name=".activities.CandidateMatchViewerActivity"/>
-        <activity android:name=".activities.CompanyMatchViewerActivity"/>
-        <activity android:name=".activities.EditJobOpeningActivity" />
-        <activity android:name=".activities.JobOpeningsListActivity" />
-        <activity android:name=".activities.EditCandidateProfile" />
-        <activity android:name=".activities.CompanyDashboardActivity" />
-        <activity android:name=".activities.CandidateDashboardActivity" />
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,6 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.CandidateMatchViewerActivity"/>
+        <activity android:name=".activities.CompanyMatchViewerActivity"/>
+        <activity android:name=".activities.EditJobOpeningActivity" />
+        <activity android:name=".activities.JobOpeningsListActivity" />
+        <activity android:name=".activities.EditCandidateProfile" />
+        <activity android:name=".activities.CompanyDashboardActivity" />
+        <activity android:name=".activities.CandidateDashboardActivity" />
         <activity android:name=".activities.AddNewJobOpening" />
         <activity android:name=".activities.SignUpActivity" />
         <activity android:name=".activities.LoginActivity" />
