--- a/frontend/android/build.gradle
+++ b/frontend/android/build.gradle
@@ -3,11 +3,15 @@
 buildscript {
     repositories {
         google()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'io.fabric.tools:gradle:1.29.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
