Onboarding Screen Added
Onboarding screen WIP.

--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".activities.JobDetailActivity" />
         <activity android:name=".activities.CandidateDetailActivity" />
         <activity android:name=".activities.ChatActivity" />
+        <activity android:name=".activities.OnboardingActivity" />
     </application>
 
 </manifest>
