--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:support-core-ui:28.0.0'
+
+    implementation 'com.romandanylyk:pageindicatorview:1.0.0@aar'
 }
 
 apply plugin: 'com.google.gms.google-services'
